typo and preprints

--- a/jeffe.bib
+++ b/jeffe.bib
@@ -11,12 +11,24 @@
 @string{jeffe = {Jeff Erickson}}
 
 
-@misc{annular,
-	Author = {Chang, Hsien-Chih and Erickson, Jeff},
+@misc{untangle,
+	Author = {Chang, Hsien-Chih and Erickson, Jeff and de Mesmay, Arnaud and Letscher, David and Schleimer, Saul and Sedgwick, Eric and Thurston, Dylan and Tillmann, Stephan},
 	Howpublished = {Preprint},
-	Title = {Unwinding Annular Curves and Electrically Reducing Planar Networks},
+	Title = {Untangling Curves on Surfaces via Local Moves},
 	Year = {2017}}
 
+@misc{electrical,
+	Author = {Chang, Hsien-Chih and Erickson, Jeff},
+	Howpublished = {Preprint},
+	Title = {Electrically Reducing Planar Networks},
+	Year = {2017}}	
+	
+@misc{annular,
+	Author = {Chang, Hsien-Chih and Erickson, Jeff},
+	Howpublished = {Accepted to Computational Geometry: Young Researchers Forum, Proc. 33rd Int. Symp. Comput. Geom.},
+	Title = {Unwinding Annular Curves and Electrically Reducing Planar Networks},
+	Year = {2017}}
+	
 @inproceedings{repcube,
 	Author = {Abel, Zachary and Ballinger, Brad and Demaine, Erik D. and Demaine, Martin L. and Erickson, Jeff and Hesterberg, Adam and Ito, Hiro and Kostitsyna, Irina and Lynch, Jayson and Uehara, Ryuhei},
 	Booktitle = {Abstracts 19th Japan Conf. Discrete Comput. Geom., Graphs, Games},
