--- a/topology.bib
+++ b/topology.bib
@@ -2,10 +2,11 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-01-27 16:35:50 -0600 
+%% Created for Jeff Erickson at 2017-03-18 13:26:12 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+
 
 
 @inproceedings{abil-ivd-16,
@@ -647,9 +648,9 @@
 @inproceedings{ps-drpgg-06,
 	Author = {Poger, Sofya and Sussman, Yoram J.},
 	Booktitle = {Algorithms and Complexity in Durham 2006: Proceedings of the Second ACiD Workshop},
-	Comments = {unavailable anywhere online},
+	Comments = {unavailable anywhere online, conference talk was canceled},
 	Date-Added = {2015-09-27 14:06:50 +0000},
-	Date-Modified = {2015-09-27 14:08:14 +0000},
+	Date-Modified = {2017-03-18 18:26:12 +0000},
 	Pages = {119--130},
 	Title = {A Delta-Wye-Delta Reduction for Planar Grid Graphs in Subquadratic Time},
 	Year = {2006}}
