some planar graph stuff

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,68 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-03-18 13:26:12 -0500 
+%% Created for Jeff Erickson at 2017-06-21 11:38:48 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{dt-ogast-90,
+	Author = {Di Battista, Giuseppe and Tamassia, Roberto},
+	Booktitle = {Proc. 17th Int. Colloq. Automata Lang. Prog.},
+	Comments = {Full version in \cite{dt-opt-96}},
+	Date-Added = {2017-06-21 16:31:48 +0000},
+	Date-Modified = {2017-06-21 16:38:27 +0000},
+	Doi = {10.1007/BFb0032061},
+	Editor = {Paterson, Michael S.},
+	Pages = {598--611},
+	Publisher = {Springer},
+	Series = {Lecture Notes Comput. Sci.},
+	Title = {On-line graph algorithms with {SPQR}-trees},
+	Volume = {443},
+	Year = {1990},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BFb0032061}}
+
+@article{dt-opt-96,
+	Author = {Di Battista, Giuseppe and Tamassia, Roberto},
+	Comments = {full version of \cite{bt-ipt-89} and \cite{dt-ogast-90}},
+	Date-Added = {2017-06-21 16:28:15 +0000},
+	Date-Modified = {2017-06-21 16:38:20 +0000},
+	Doi = {10.1137/S0097539794280736},
+	Journal = {SIAM J. Comput.},
+	Keywords = {SPQR-trees},
+	Number = {5},
+	Pages = {956--997},
+	Title = {On-line planarity testing},
+	Volume = {25},
+	Year = {1996},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1137/S0097539794280736}}
+
+@article{ap-igs-61,
+	Author = {Auslander, Louis and Parter, Seymour V.},
+	Date-Added = {2017-06-21 16:06:59 +0000},
+	Date-Modified = {2017-06-21 16:14:28 +0000},
+	Doi = {10.1512/iumj.1961.10.10032},
+	Journal = {J. Math. Mech. [=~Indiana Univ. Math. J.]},
+	Keywords = {planar embedding algorithm},
+	Number = {3},
+	Pages = {517--523},
+	Title = {On imbedding graphs in the sphere},
+	Volume = {10},
+	Year = {1961},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1512/iumj.1961.10.10032}}
+
+@article{s-cpe-93,
+	Author = {Stallmann, Matthias F. M.},
+	Date-Added = {2017-06-21 15:43:22 +0000},
+	Date-Modified = {2017-06-21 15:44:19 +0000},
+	Journal = {Discrete Math.},
+	Pages = {385--392},
+	Read = {1},
+	Title = {On counting planar embeddings},
+	Volume = {122},
+	Year = {1993}}
 
 @inproceedings{abil-ivd-16,
 	Annote = {Keywords: Voronoi diagrams, dynamic data structures, Delaunay triangulation},
@@ -48,11 +104,12 @@
 	Volume = {23},
 	Year = {1930}}
 
-@inproceedings{bt-ipt-89,
-	Author = {Battista, Giuseppe Di and Tamassia, Roberto},
+@inproceedings{dt-ipt-89,
+	Author = {Di Battista, Giuseppe and Tamassia, Roberto},
 	Booktitle = {Proc. 30th Ann. IEEE Symp. Foundations Comput. Sci.},
+	Comments = {Full version in \cite{dt-opt-96}},
 	Date-Added = {2016-12-09 19:58:30 +0000},
-	Date-Modified = {2016-12-09 20:00:38 +0000},
+	Date-Modified = {2017-06-21 16:38:14 +0000},
 	Doi = {10.1109/SFCS.1989.63515},
 	Keywords = {SPQR-trees},
 	Pages = {436--441},
@@ -245,7 +302,7 @@
 	Year = {2016}}
 
 @article{m-smcc-94,
-	Author = {Piotr Minc},
+	Author = {Minc, Piotr},
 	Comments = {define derivative of a polygonal path},
 	Journal = {Topology and its Applications},
 	Number = {1},
@@ -265,7 +322,7 @@
 
 @misc{s-sigpv-16,
 	Arxiv = {1609.03727},
-	Author = {Arkadiy Skopenkov},
+	Author = {Skopenkov, Arkadiy},
 	Howpublished = {Preprint},
 	Month = {Sep},
 	Title = {Stability of intersections of graphs in the plane and the van Kampen obstruction},
@@ -273,7 +330,7 @@
 
 @misc{f-egeg-16,
 	Arxiv = {1608.02087},
-	Author = {Radoslav Fulek},
+	Author = {Fulek, Radoslav},
 	Howpublished = {Preprint},
 	Month = {Aug},
 	Title = {Embedding graphs into embedded graphs},
@@ -289,10 +346,10 @@
 
 @inproceedings{a-ekmes-07,
 	Arxiv = {math/0604045},
-	Author = {Arkadiy Skopenkov},
+	Author = {Skopenkov, Arkadiy},
 	Booktitle = {Surveys in Contemporary Mathematics},
 	Comments = {proof of deformation retract of simplicial deleted product},
-	Editor = {Nicholas Young and Yemon Choi},
+	Editor = {Young, Nicholas and Choi, Yemon},
 	Pages = {248--342},
 	Publisher = {Cambridge: Cambridge University Press},
 	Series = {London Mathematical Society Lecture Notes},
@@ -308,8 +365,8 @@
 	Publisher = {Springer},
 	Title = {The {van Kampen} obstruction and its relatives},
 	Volume = {266},
-	Year = {2009}}	
-	
+	Year = {2009}}
+
 @article{s-dpcem-98,
 	Author = {Skopenkov, Arkadiy B.},
 	Date-Added = {2016-09-24 05:29:14 +0000},
@@ -504,7 +561,7 @@
 	Year = {2014}}
 
 @phdthesis{s-hski-14thesis,
-	Author = {Alexey Sleptsov},
+	Author = {Sleptsov, Alexey},
 	School = {Universiteit van Amsterdam},
 	Title = {Hidden structures of knot invariants},
 	Type = {{Ph.D.} dissertation},
@@ -512,9 +569,9 @@
 
 @misc{t-pik3-04,
 	Arxiv = {math/0406190},
-	Author = {Tomotada Ohtsuki (editor)},
+	Author = {(editor), Tomotada Ohtsuki},
 	Comments = {Open problems from workshop and seminars on “Invariants of knots and 3-manifolds” held at Research Institute for Mathematical	Sciences, Kyoto University in September 2001},
-	Editor = {Tomotada Ohtsuki},
+	Editor = {Ohtsuki, Tomotada},
 	Month = {Jun},
 	Title = {Problems on invariants of knots and 3-manifolds},
 	Year = {2004}}
@@ -539,7 +596,7 @@
 
 @misc{dl-cginc-16,
 	Arxiv = {cs.CG/1511.09327v2},
-	Author = {Vincent Despré and Francis Lazarus},
+	Author = {Despré, Vincent and Lazarus, Francis},
 	Howpublished = {Preprint},
 	Month = {Jan},
 	Title = {Computing the Geometric Intersection Number of Curves},
@@ -547,7 +604,7 @@
 
 @misc{dfm-ag-16,
 	Arxiv = {math.CO/1603.02310},
-	Author = {Guoli Ding and Joshua Fallon and Emily Marshall},
+	Author = {Ding, Guoli and Fallon, Joshua and Marshall, Emily},
 	Howpublished = {Preprint},
 	Month = {Mar},
 	Title = {On almost-planar graphs},
@@ -568,8 +625,8 @@
 	Pages = {166--183},
 	Title = {Tutte's edge-colouring conjecture},
 	Volume = {70},
-	Year = {1997}}	
-	
+	Year = {1997}}
+
 @article{a-cas-26,
 	Author = {Alexander, James W.},
 	Date-Added = {2015-12-02 15:12:11 +0000},
@@ -1916,14 +1973,14 @@
 
 @incollection{tsb-cltas-00,
 	Author = {Thilikos, Dimitrios M. and Serna, Maria J. and Bodlaender, Hans L.},
-	Booktitle = {Algorithms and Computation},
-	Date-Modified = {2015-08-15 18:07:25 +0000},
+	Booktitle = {Proc. 11th Int. Conf. Algorithms Comput.},
+	Date-Modified = {2017-06-21 16:36:25 +0000},
 	Editor = {Goos, Gerhard and Hartmanis, Juris and van Leeuwen, Jan and Lee, D.T. and Teng, Shang-Hua},
 	Note = {Relate carvingwidth to treewidth},
 	Pages = {192--203},
 	Publisher = {Springer},
 	Read = {1},
-	Series = {Lecture Notes in Computer Science},
+	Series = {Lecture Notes Comput. Sci.},
 	Title = {Constructive Linear Time Algorithms for Small Cutwidth and Carving-Width},
 	Volume = {1969},
 	Year = {2000}}
@@ -2929,10 +2986,10 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 
 @inproceedings{addf-spt-13,
 	Arxiv = {1309.0683},
-	Author = {Angelini, Patrizio and Lozzo, Giordano Da and Battista, Giuseppe Di and Frati, Fabrizio},
-	Booktitle = {Proc. 21st International Symposium on Graph Drawing},
+	Author = {Angelini, Patrizio and Da Lozzo, Giordano and Di Battista, Giuseppe and Frati, Fabrizio},
+	Booktitle = {Proc. 21st Int. Symp. Graph Drawing},
 	Date-Added = {2014-07-20 15:26:41 +0000},
-	Date-Modified = {2014-07-20 15:26:41 +0000},
+	Date-Modified = {2017-06-21 16:37:42 +0000},
 	Pages = {37--48},
 	Title = {Strip Planarity Testing},
 	Year = {2013}}
@@ -2940,10 +2997,11 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 @article{cnao-laepg-85,
 	Author = {Chiba, Norishige and Nishizeki, Takao and Abe, Shigenobu and Ozawa, Takao},
 	Date-Added = {2014-07-20 15:26:41 +0000},
-	Date-Modified = {2014-07-20 15:26:41 +0000},
+	Date-Modified = {2017-06-21 15:45:54 +0000},
 	Journal = {J. Comput. Syst. Sci.},
 	Number = {1},
 	Pages = {54--76},
+	Read = {1},
 	Title = {A Linear Algorithm for Embedding Planar Graphs Using PQ-trees},
 	Volume = {30},
 	Year = {1985}}
@@ -2961,9 +3019,9 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 	Year = {2002}}
 
 @article{cbpp-ecpg-09,
-	Author = {Cortese, Pier Francesco and Battista, Giuseppe Di and Patrignani, Maurizio and Pizzonia, Maurizio},
+	Author = {Cortese, Pier Francesco and Di Battista, Giuseppe and Patrignani, Maurizio and Pizzonia, Maurizio},
 	Date-Added = {2014-07-20 15:26:41 +0000},
-	Date-Modified = {2016-12-09 19:58:29 +0000},
+	Date-Modified = {2017-06-21 16:37:35 +0000},
 	Journal = {Discrete Mathematics},
 	Number = {7},
 	Pages = {1856--1869},
@@ -3187,13 +3245,13 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Booktitle = {Proc. 9th Scand. Workshop Algorithm Theory},
 	Comments = {incorrect weakly simple polygon},
 	Date-Added = {2014-06-18 20:42:36 +0000},
-	Date-Modified = {2014-06-18 20:50:49 +0000},
+	Date-Modified = {2017-06-21 16:34:39 +0000},
 	Editor = {Hagerup, Torben and Katajainen, Jyrki},
 	Note = {Preliminary version of \cite{hst-pbets-10}},
 	Pages = {442--454},
 	Publisher = {Springer},
 	Read = {1},
-	Series = {Lecture Notes in Computer Science},
+	Series = {Lecture Notes Comput. Sci.},
 	Title = {Pointed Binary Encompassing Trees},
 	Volume = {3111},
 	Year = {2004},
@@ -8740,8 +8798,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{ls-sim-59,
 	Author = {Lashof, Richard K. and Smale, Stephen},
 	Date-Added = {2012-01-01 15:38:24 +0000},
-	Date-Modified = {2012-01-01 15:45:29 +0000},
-	Journal = {J. Math. Mech.},
+	Date-Modified = {2017-06-21 16:10:08 +0000},
+	Journal = {J. Math. Mech. [=~Indiana Univ. Math. J.]},
 	Number = {1},
 	Pages = {143--157},
 	Read = {1},
@@ -12826,8 +12884,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{f-hgl-66,
 	Author = {Folkman, Jon},
 	Date-Added = {2011-01-30 22:01:23 -0600},
-	Date-Modified = {2011-01-30 22:03:50 -0600},
-	Journal = {J. Math. Mech.},
+	Date-Modified = {2017-06-21 16:10:08 +0000},
+	Journal = {J. Math. Mech. [=~Indiana Univ. Math. J.]},
 	Keywords = {nerve lemma (homology)},
 	Number = {4},
 	Pages = {631--636},
@@ -16046,8 +16104,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{y-migg-63,
 	Author = {Youngs, John W. T.},
 	Date-Added = {2009-09-13 15:31:46 -0500},
-	Date-Modified = {2012-03-25 21:59:06 +0000},
-	Journal = {J. Math. Mech.},
+	Date-Modified = {2017-06-21 16:10:08 +0000},
+	Journal = {J. Math. Mech. [=~Indiana Univ. Math. J.]},
 	Keywords = {rotation system},
 	Number = {3},
 	Pages = {303--315},
