more planar graph stuff

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,57 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-06-21 11:38:48 -0500 
+%% Created for Jeff Erickson at 2017-06-21 13:00:19 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{c-cepgd-93,
+	Author = {Cai, Jaizhen},
+	Date-Added = {2017-06-21 17:56:35 +0000},
+	Date-Modified = {2017-06-21 17:58:12 +0000},
+	Doi = {10.1137/0406027},
+	Journal = {SIAM J. Discrete Math.},
+	Number = {3},
+	Pages = {335--352},
+	Title = {Counting embeddings of planar graphs using {DFS} trees},
+	Volume = {6},
+	Year = {1993}}
+
+@article{w-pilgc-86,
+	Author = {{Wu Wen-Jun (Wu Wen-tsün)}},
+	Date-Added = {2017-06-21 17:34:25 +0000},
+	Date-Modified = {2017-06-21 17:44:51 +0000},
+	Journal = {J. Sys. Sci \& Math. Scis.},
+	Note = {Reprinted in \cite[pp. 245--257]{w-sww-08}.},
+	Number = {1},
+	Pages = {23--35},
+	Title = {On the planar imbedding of linear graphs (continued)},
+	Volume = {6},
+	Year = {1986}}
+
+@book{w-sww-08,
+	Author = {Wu, Wen-Tsun},
+	Date-Added = {2017-06-21 17:31:43 +0000},
+	Date-Modified = {2017-06-21 17:40:43 +0000},
+	Publisher = {World Scientific},
+	Read = {1},
+	Title = {Selected Works of Wen-Tsun Wu},
+	Year = {2008}}
+
+@article{w-pilg-85,
+	Author = {{Wu Wen-Jun (Wu Wen-tsün)}},
+	Date-Added = {2017-06-21 17:29:10 +0000},
+	Date-Modified = {2017-06-21 17:44:46 +0000},
+	Journal = {J. Sys. Sci \& Math. Scis.},
+	Note = {Reprinted in \cite[pp.~231--242]{w-sww-08}.},
+	Number = {4},
+	Pages = {290--390},
+	Title = {On the planar imbedding of linear graphs},
+	Volume = {5},
+	Year = {1985}}
 
 @inproceedings{dt-ogast-90,
 	Author = {Di Battista, Giuseppe and Tamassia, Roberto},
