more planar stuff

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-06-21 13:00:19 -0500 
+%% Created for Jeff Erickson at 2017-06-22 18:26:18 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{s-upqtp-85,
+	Author = {Stallmann, Matthias F. M.},
+	Date-Added = {2017-06-22 23:15:06 +0000},
+	Date-Modified = {2017-06-22 23:26:16 +0000},
+	Institution = {Dept. Comput. Sci., NC State Univ.},
+	Month = {December},
+	Number = {{NCSU-CSC TR-85-24}},
+	Title = {Using {PQ}-trees for planar embedding problems},
+	Url = {https://people.engr.ncsu.edu/mfms/Publications/1985-TR_NCSU_CSC-PQ_Trees.pdf},
+	Year = {1985}}
 
 @article{c-cepgd-93,
 	Author = {Cai, Jaizhen},
@@ -19,7 +30,8 @@
 	Pages = {335--352},
 	Title = {Counting embeddings of planar graphs using {DFS} trees},
 	Volume = {6},
-	Year = {1993}}
+	Year = {1993},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1137/0406027}}
 
 @article{w-pilgc-86,
 	Author = {{Wu Wen-Jun (Wu Wen-tsün)}},
