--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-06-22 18:26:18 -0500 
+%% Created for Jeff Erickson at 2017-06-22 21:08:47 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{d-pe-75,
+	Author = {Dweighter, Harry},
+	Comments = {= Jacob (Eli) Goodman},
+	Date-Added = {2017-06-23 02:01:43 +0000},
+	Date-Modified = {2017-06-23 02:04:44 +0000},
+	Journal = {Amer. Math. Monthly},
+	Number = {10},
+	Pages = {1010},
+	Title = {Problem E2569},
+	Volume = {82},
+	Year = {1975}}
 
 @techreport{s-upqtp-85,
 	Author = {Stallmann, Matthias F. M.},
@@ -18,7 +30,8 @@
 	Number = {{NCSU-CSC TR-85-24}},
 	Title = {Using {PQ}-trees for planar embedding problems},
 	Url = {https://people.engr.ncsu.edu/mfms/Publications/1985-TR_NCSU_CSC-PQ_Trees.pdf},
-	Year = {1985}}
+	Year = {1985},
+	Bdsk-Url-1 = {https://people.engr.ncsu.edu/mfms/Publications/1985-TR_NCSU_CSC-PQ_Trees.pdf}}
 
 @article{c-cepgd-93,
 	Author = {Cai, Jaizhen},
