--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-06-22 21:08:47 -0500 
+%% Created for Jeff Erickson at 2017-06-27 12:02:02 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{b-uam-11,
+	Author = {Brouwer, Luitzen E. J.},
+	Comments = {degree of map = homotopy invariant},
+	Date-Added = {2017-06-27 16:58:34 +0000},
+	Date-Modified = {2017-06-27 17:01:45 +0000},
+	Doi = {10.1007/BF01456931},
+	Journal = {Math. Ann.},
+	Number = {1},
+	Pages = {97--115},
+	Read = {1},
+	Title = {Über {Abbildung} von {Mannigfaltigkeiten}},
+	Volume = {71},
+	Year = {1911}}
 
 @article{d-pe-75,
 	Author = {Dweighter, Harry},
